{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 247,
  "lineage": "52156c01-22d6-32e3-4ee2-8b8f45df8621",
  "resources": [
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_h",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:546314735933:instance/i-049da61e7bbe28c7b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049da61e7bbe28c7b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hari-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06609be43e302d7da",
            "private_dns": "ip-172-31-90-245.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.90.245",
            "public_dns": "ec2-54-167-139-162.compute-1.amazonaws.com",
            "public_ip": "54.167.139.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00813e1dec7c4fdae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "dev-ecs-cluster-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bbab0b6794be389",
            "tags": {
              "Name": "dev-ecs-cluster"
            },
            "tags_all": {
              "Name": "dev-ecs-cluster"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07e8db51d8ba5a25d"
            ]
          },
          "dependencies": [
            "module.ec2_module.aws_key_pair.ec2-key",
            "module.ec2_module.aws_security_group.ecs_instance",
            "module.ec2_module.tls_private_key.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546314735933:security-group/sg-07e8db51d8ba5a25d",
            "description": "dev-ecs-cluster-ec2-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e8db51d8ba5a25d",
            "ingress": [
              {
                "cidr_blocks": [
                  "108.247.90.198/32"
                ],
                "description": "TCP/22 for VPC Range",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "108.247.90.198/32"
                ],
                "description": "TCP/8080 for spring",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "dev-ecs-cluster-ec2-sg",
            "name_prefix": "",
            "owner_id": "546314735933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ecs-cluster-ec2-sg"
            },
            "tags_all": {
              "Name": "dev-ecs-cluster-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-088f2b66916273a8d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Custom_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "108.247.90.198/32"
            ],
            "description": "TCP/8080 for spring",
            "from_port": 8080,
            "id": "sgrule-3022785807",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e8db51d8ba5a25d",
            "security_group_rule_id": "sgr-0c71ece719d7df801",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_module.aws_security_group.ecs_instance"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-18894516",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07e8db51d8ba5a25d",
            "security_group_rule_id": "sgr-09497de5c248ae328",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_module.aws_security_group.ecs_instance"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "108.247.90.198/32"
            ],
            "description": "TCP/22 for VPC Range",
            "from_port": 22,
            "id": "sgrule-2162037687",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e8db51d8ba5a25d",
            "security_group_rule_id": "sgr-0160f9a96406ba2f0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_module.aws_security_group.ecs_instance"
          ]
        }
      ]
    },
    {
      "module": "module.posgtress_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:546314735933:security-group/sg-06c8c97ed1ec695fa",
            "description": "dev-ecs-cluster-rds-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c8c97ed1ec695fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "108.247.90.198/32",
                  "172.31.0.0/16",
                  "172.31.48.0/20"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-ecs-cluster-rds-sg",
            "name_prefix": "",
            "owner_id": "546314735933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ecs-cluster-ec2-sg"
            },
            "tags_all": {
              "Name": "dev-ecs-cluster-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-088f2b66916273a8d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}